--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
 		"postcss-pxtorem": "^6.0.0",
 		"sass": "^1.62.0",
 		"sass-loader": "^13.2.2"
+	},
+	"dependencies": {
+		"jquery": "^3.6.4"
 	}
 }
